detail product fix

--- a/MicroServices-master/client/src/main/resources/templates/productdetail.html
+++ b/MicroServices-master/client/src/main/resources/templates/productdetail.html
@@ -48,7 +48,7 @@
             </form>
             <h3>Product Details <i class="fa fa-indent"></i></h3>
             <br>
-            <p th:text="${product.description}"></p>
+            <p> <span th:text="${product.description}"></span></p>
 
         </div>
     </div>
